--- a/about.qmd
+++ b/about.qmd
@@ -4,16 +4,16 @@ title: "About"
 
 ![](Images/photo.jpg){fig-align="left"}
 
-__Reporting Bat Survey Data__ compliments the _data science_ chapters of the forthcoming BCT Bat Survey Guidelines 4^th^ Edition. Unlike the guidelines it has the R code making the analysis; which can be copied and used.
+**Reporting Bat Survey Data** compliments the *data science* chapters of the forthcoming BCT Bat Survey Guidelines 4^th^ Edition. Unlike the guidelines it has the R code making the analysis; which can be copied and used.
 
-These web pages were written by Steve Markham, Director and Data Scientist at _Marquis & Lord Ltd._ Over my 39 year career I have developed and applied software applications to water management and more recently, the last 15 years, applied _data science_ to a wide range of projects using the R software environment. I have held a Natural England Roost Visitors Licence since 1997, undertaking numerous commercial bat projects and voluntary bat work, including being a Trustee of the Bat Conservation Trust from 2012 to 2021.  I have been on the editorial board of all the editions of the Bat Survey Guidelines[^1], encouraging ecologists to make the most of their bat survey data; these web pages hopefully make it easier to do this, and more rewarding - its good for bats! 
+These web pages were written by Steve Markham, Director and Data Scientist at *Marquis & Lord Ltd.* Over my 39 year career I have developed and applied software applications to water management and more recently, the last 15 years, applied *data science* to a wide range of projects using the R software environment. I have held a Natural England Roost Visitors Licence since 1997, undertaking numerous commercial bat projects and voluntary bat work, including being a Trustee of the Bat Conservation Trust from 2012 to 2021. I have been on the editorial board of all the editions of the Bat Survey Guidelines[^1], encouraging ecologists to make the most of their bat survey data; these web pages hopefully make it easier to do this, and more rewarding - its good for bats!
 
-This web site also introduces the `iBats` package[^2]. `iBats` is a package with a range of functions that hopefully enhances and smooths the _data science_ of bat data collected from bat detectors post sound identification.  
+[^1]: the current version of the Bat Survey Guidelines can be found here: <https://www.bats.org.uk/resources/guidance-for-professionals/bat-surveys-for-professional-ecologists-good-practice-guidelines-3rd-edition>
+
+This web site also introduces the `iBats` package[^2]. `iBats` is a package with a range of functions that hopefully enhances and smooths the *data science* of bat data collected from bat detectors post sound identification.
+
+[^2]: the `iBats` package is held on GitHub: <https://github.com/Nattereri/iBats>
 
 <!-- The `iBats` name is borrowed from Prof Kate Jones and follows in the citizen science spirit of the original __iBats__. -->
 
 Finally a special thanks to the bat workers who have put up with my incessant data talk, especially: Amanda, Anna, Kevin, Liat, Phil, Richard and, Suzy.
-
-[^1]: the current version of the Bat Survey Guidelines can be found here:   <https://www.bats.org.uk/resources/guidance-for-professionals/bat-surveys-for-professional-ecologists-good-practice-guidelines-3rd-edition>
-
-[^2]: the `iBats` package is held on GitHub: <https://github.com/Nattereri/iBats>
