--- a/index.qmd
+++ b/index.qmd
@@ -3,24 +3,23 @@ title: "Getting Started"
 bibliography: packages.bib
 ---
 
-*__These web pages are under active construction__*
-(so many things won't look right)
+***These web pages are under active construction*** (so many things won't look right)
 
-These web pages compliment the _data science_ chapters of the forthcoming BCT Bat Survey Guidelines 4^th^ Edition, and hopefully encourage ecologists to make the most of their bat survey data. They also demonstrate literate programming with Quarto®[^1] which can vastly improve workflow (_welcome to the world beyond Excel_).
+These web pages compliment the *data science* chapters of the forthcoming BCT Bat Survey Guidelines 4^th^ Edition, and hopefully encourage ecologists to make the most of their bat survey data. They also demonstrate literate programming with Quarto®[^1] which can vastly improve workflow (*welcome to the world beyond Excel*).
 
 [^1]: Quarto® is an open-source scientific and technical publishing system: see <https://quarto.org/>
 
 ![](Images/homesunrise2.png)
 
+## Install R, RStudio and Packages
 
-## Install R, RStudio and Packages  
+1.  Download and install the latest version of R <https://cran.r-project.org/bin/windows/base/>. Download the version for your operating system; R can be downloaded for Windows, Mac & Linux.\
+2.  It is recommended R is used through the *RStudio* IDE. Download and install the latest version of RStudio from their web page <https://www.rstudio.com/products/rstudio/#Desktop>. Download the *free* desktop version.
 
-1. Download and install the latest version of R  <https://cran.r-project.org/bin/windows/base/>. Download the version for your operating system; R can be downloaded for Windows, Mac & Linux.    
-2. It is recommended R is used through the _RStudio_ IDE. Download and install the latest version of RStudio from their web page <https://www.rstudio.com/products/rstudio/#Desktop>.  Download the _free_ desktop version.
+### Install the *iBats* Package from GitHub
 
-### Install the _iBats_ Package from GitHub
+The `iBats` package contains example data and functions that help with the *Data Science* of bat survey results. To install this package use the code below in the console (see Figure ); *one line at a time*. The package is installed from GitHub.
 
-The `iBats` package contains example data and functions that help with the _Data Science_ of bat survey results. To install this package use the code below in the console (see Figure ); _one line at a time_. The package is installed from GitHub.   
 ```{r}
 #| echo=FALSE,  
 #| eval=FALSE
@@ -59,13 +58,7 @@ knitr::write_bib(c('base',
 
 ```
 
-
-
-
-
-
-
-```{r} 
+```{r}
 #| echo=TRUE, 
 #| eval=FALSE
 
@@ -76,23 +69,20 @@ devtools::install_github("Nattereri/iBats")
 
 ```
 
-
 ## Acknowledgements
 
 These web pages were built on the shoulders of others:
 
+The visualisation and analysis has been undertaken in R [@R-base] using `r R.version.string`; R is an open-source statistical programming language.
 
-The visualisation and analysis has been undertaken in R [@R-base] using `r R.version.string`; R is an open-source statistical programming language.  
-
-This document has been produced dynamically using `knitr` [@R-knitr] and QUARTO, integrating the data, analysis and reporting. The analysis has undertaken a tidyverse approach [@tidyverse2019].  
+This document has been produced dynamically using `knitr` [@R-knitr] and QUARTO, integrating the data, analysis and reporting. The analysis has undertaken a tidyverse approach [@tidyverse2019].
 
 The graphics have been produced using the R package `ggplot2` [@R-ggplot2]. The `scales` [@R-scales] package improves the clarity of scales on `ggplot` graphics.
 
-The wrangling of data was undertaken with `dplyr` [@R-dplyr] and `tidyr` packages. The data in _csv_ and _Excel_ files has been imported with `readr` [@R-readr] and `readxl` [@R-readxl] packages respectivily.  The computation with dates and times has been accomplished with `lubridate` [@R-lubridate] package. Suntimes have been obtained with the `suncalc` [@R-suncalc] package.  
+The wrangling of data was undertaken with `dplyr` [@R-dplyr] and `tidyr` packages. The data in *csv* and *Excel* files has been imported with `readr` [@R-readr] and `readxl` [@R-readxl] packages respectivily. The computation with dates and times has been accomplished with `lubridate` [@R-lubridate] package. Suntimes have been obtained with the `suncalc` [@R-suncalc] package.
 
-The manipulation of text was through the `stringr` [@R-stringr] package.  Summary statistics have been produced with the `mosaic` [@R-mosaic] package. 
+The manipulation of text was through the `stringr` [@R-stringr] package. Summary statistics have been produced with the `mosaic` [@R-mosaic] package.
 
-Tables have been produced with `knitr` [@R-knitr] with `kableExtra` [@R-kableExtra], `gt` [@R-knitr] and the `flextable` [@R-flextable] packages. The `broman` [@R-broman] package provided some useful R functions. 
-
+Tables have been produced with `knitr` [@R-knitr] with `kableExtra` [@R-kableExtra], `gt` [@R-knitr] and the `flextable` [@R-flextable] packages. The `broman` [@R-broman] package provided some useful R functions.
 
 ## References
