--- a/aggregation.qmd
+++ b/aggregation.qmd
@@ -29,8 +29,7 @@ Data aggregation is one of the pillars of data analysis, the process where *tidy
 1.  over a given time period, or
 2.  spatially for locations or a factor related to a location (e.g. woodland)
 
-
-The bat survey data `statics` in the `iBats` package has `r add_commas(nrow(statics))` bat observations; a random selection of 5 rows is shown in @tbl-aggtidy. 
+The bat survey data `statics` in the `iBats` package has `r add_commas(nrow(statics))` bat observations; a random selection of 5 rows is shown in @tbl-aggtidy.
 
 ```{r}
 #| label: tbl-aggtidy
@@ -40,15 +39,34 @@ statics %>% # statics is a tidy data set from the iBats package
   sample_n(5) %>% 
   arrange(DateTime) %>% 
   # Table made with gt
-  gt()
-
+  gt() %>% 
+  tab_style(
+    style = list(
+      cell_fill(color = "black"),
+      cell_text(color = "white", weight = "bold")
+      ),
+    locations = cells_column_labels(
+      columns = c(everything())
+    )
+  ) %>% 
+  # Make bat scientific name italic
+  tab_style(
+    style = list(
+      cell_text(style = "italic")
+      ),
+    locations = cells_body(
+      columns = c(Species)
+    )
+  )
 ```
 
-The simplest form of aggregation is a count of bats^[note:- in this case it is a count of bat passes]; as shown in @tbl-simplecount
+The simplest form of aggregation is a count of bats[^1]; as shown in @tbl-simplecount
+
+[^1]: note:- in this case it is a count of bat passes
 
 ```{r}
 #| label: tbl-simplecount
-#| tbl-cap: "A Count of Bats Grouped by Species"
+#| tbl-cap: "A Count by Species"
 
 statics %>%
   group_by(Species) %>% 
@@ -56,17 +74,36 @@ statics %>%
   #arrange descending
   arrange(desc(n)) %>% 
   # rename n as count
-  rename(`Bat Species` = Species, count = n) %>% 
-  # Table made with knitr::kable()
-  knitr::kable()
+  rename(`Bat Species` = Species, Count = n) %>% 
+  # so table is produced with individual species on one row
+  ungroup() %>% 
+  # Table made gt()
+  gt() %>% 
+  tab_style(
+    style = list(
+      cell_fill(color = "black"),
+      cell_text(color = "white", weight = "bold")
+      ),
+    locations = cells_column_labels(
+      columns = c(everything())
+    )
+  ) %>% 
+  # Make bat scientific name italic
+  tab_style(
+    style = list(
+      cell_text(style = "italic")
+      ),
+    locations = cells_body(
+      columns = c(`Bat Species`)
+    )
+  )
   
 
 ```
 
+More informative tables can be made by adding meta data such as the Month and Year of the observations. This is easy done on a *tidy data* conforming to the *minimal data requirement* with the `date_time_info` function in the `iBats` package. @tbl-countannex2 shows the monthly count (bat passes) of *Annex II* species[^2]; .
 
-More informative tables can be made by adding meta data such as the Month and Year of the observations.  This is easy done on a _tidy data_ conforming to the _minimal data requirement_  with the `date_time_info` function in the `iBats` package. @tbl-countannex2 shows the monthly count (bat passes) of _Annex II_ species[^1];  .
-
-[^1]: <https://ec.europa.eu/environment/nature/conservation/species/habitats_dir_en.htm>
+[^2]: <https://ec.europa.eu/environment/nature/conservation/species/habitats_dir_en.htm>
 
 ```{r}
 #| label: tbl-countannex2
@@ -110,8 +147,7 @@ statics_plus %>%
   
 ```
 
-
-Tables of numbers can be frustrating to read.  To help readability the table can be annotated highlighting the  count on a colour scale linked to the magnitude of the result. This is shown in @tbl-countannex2c for the count of bats shown in  @tbl-countannex2. 
+Tables of numbers can be frustrating to read. To help readability the table can be annotated highlighting the count on a colour scale linked to the magnitude of the result. This is shown in @tbl-countannex2c for the count of bats shown in @tbl-countannex2.
 
 ```{r}
 #| label: tbl-countannex2c
